--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ srcs += files('axis2.f')
 srcs += files('axis3.f')
 srcs += files('axis.f')
 srcs += files('blckmgs.f90')
+srcs += files('block.f')
 srcs += files('blowsy.f')
 srcs += files('cm5.f')
 srcs += files('copyc6.f')
