--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ os: linux
 dist: bionic
 
 language: python
-python:
-- 3.7
+python: 3.7
 
 addons:
   apt:
@@ -21,10 +20,10 @@ addons:
 
 jobs:
   include:
+  - os: linux
   - os: osx
     env: FC=gfortran
     language: minimal
-    python: 3.7
 
 install:
   - pip3 install meson
