--- a/meson_options.txt
+++ b/meson_options.txt
@@ -24,3 +24,5 @@ option('openmp', type: 'boolean', value: true,
        description: 'use OpenMP parallelisation')
 option('interface', type: 'combo', value: '32', choices: ['32', '64'],
        description: 'integer precision range in bits.')
+option('static', type: 'boolean', value: true,
+       description: 'Produce statically linked executables')
