Add meson options for windows build
Added compile options for Intel Fortran on windows

--- a/meson.build
+++ b/meson.build
@@ -41,16 +41,29 @@ elif fc.get_id() == 'intel'
   if get_option('interface') == '64'
     add_project_arguments('-i8', language: 'fortran')
   endif
+elif fc.get_id() == 'intel-cl' # Windows with Intel Fortran
+  add_project_arguments('-QaxAVX2',    language: 'fortran')
+  add_project_arguments('-traceback', language: 'fortran')
+  if get_option('static')
+    add_project_arguments('-MT', language: 'fortran') # link to static Fortran library
+  endif
+  if get_option('interface') == '64'
+    add_project_arguments('-4I8', language: 'fortran')
+  endif
 endif
 
 dependencies = []
 
 la_backend = get_option('la_backend')
 if la_backend == 'mkl'
-  libmkl = [fc.find_library('pthread')]
-  libmkl += fc.find_library('m')
-  libmkl += fc.find_library('dl')
-  if fc.get_id() == 'intel'
+  if host_machine.system() == 'windows'
+    libmkl = [fc.find_library('libiomp5md')]
+  else
+    libmkl = [fc.find_library('pthread')]
+    libmkl += fc.find_library('m')
+    libmkl += fc.find_library('dl')
+  endif
+  if (fc.get_id() == 'intel') or (fc.get_id() == 'intel-cl')
     if get_option('interface') == '64'
       libmkl += fc.find_library('mkl_intel_ilp64')
     else
@@ -66,7 +79,9 @@ if la_backend == 'mkl'
     libmkl += fc.find_library('mkl_gnu_thread')
   endif
   libmkl += fc.find_library('mkl_core')
-  libmkl += fc.find_library('iomp5')
+  if host_machine.system() != 'windows'
+    libmkl += fc.find_library('iomp5')
+  endif
   dependencies += libmkl
 elif la_backend == 'openblas'
   dependencies += fc.find_library('openblas', required : true)
@@ -84,6 +99,8 @@ if get_option('openmp')
   if fc.get_id() == 'intel'
     add_project_arguments('-qopenmp', language : 'fortran')
     add_project_link_arguments('-qopenmp', language : 'fortran')
+  elif fc.get_id() == 'intel-cl'
+    add_project_arguments('-Qopenmp', language : 'fortran')
   else
     add_project_arguments('-fopenmp', language : 'fortran')
     add_project_link_arguments('-fopenmp', language : 'fortran')
