--- a/meson.build
+++ b/meson.build
@@ -28,12 +28,14 @@ fc = meson.get_compiler('fortran')
 
 if fc.get_id() == 'gcc'
   add_project_arguments('-ffree-line-length-none', language: 'fortran')
+  add_project_arguments('-cpp', language: 'fortran')
   add_project_arguments('-fbacktrace', language: 'fortran')
   if get_option('interface') == '64'
     add_project_arguments('-fdefault-integer-8', language: 'fortran')
   endif
 elif fc.get_id() == 'intel'
   add_project_arguments('-axAVX2',    language: 'fortran')
+  add_project_arguments('-fpp',    language: 'fortran')
   add_project_arguments('-traceback', language: 'fortran')
   if get_option('static')
     add_project_link_arguments('-static', language: 'fortran')
@@ -43,6 +45,7 @@ elif fc.get_id() == 'intel'
   endif
 elif fc.get_id() == 'intel-cl' # Windows with Intel Fortran
   add_project_arguments('-QaxCORE-AVX2',    language: 'fortran')
+  add_project_arguments('-fpp',    language: 'fortran')
   add_project_arguments('-traceback', language: 'fortran')
   if get_option('static')
     add_project_arguments('-MT', language: 'fortran') # link to static Fortran library
